# battleships

./: CMakeLists.txt  LICENSE  bot.cpp  main.cpp
